# furniture_app

./: Dockerfile  Makefile  README.md  docker-compose.yml  flask_app.py  orm.py  pyproject.toml  repository.py  requirements.txt  test.http  test_allocate.py  test_batches.py
adapters/: orm.py  repository.py
domain/: model.py
entrypoints/: flask_app.py
service_layer/: services.py
src/: services.py  setup.py
src/allocation/adapters/: orm.py  repository.py
src/allocation/domain/: model.py
src/allocation/entrypoints/: flask_app.py
src/allocation/service_layer/: services.py  unit_of_work.py
tests/: conftest.py  test_api.py  test_orm.py  test_repository.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
