[tool.poetry]
name = "furniture-app"
version = "0.1.0"
description = ""
authors = ["dovgalb <bogdandovgal1208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
